syntax = "proto3";

package loveguru.user;

import "common.proto";

option go_package = "loveguru/proto/user";

service UserService {
  rpc GetProfile (GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile (UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc GetSessions (GetSessionsRequest) returns (GetSessionsResponse);
}

message GetProfileRequest {
  // authenticated user
}

message GetProfileResponse {
  common.User user = 1;
}

message UpdateProfileRequest {
  string display_name = 1;
  common.Gender gender = 2;
  string dob = 3;
}

message UpdateProfileResponse {
  common.User user = 1;
}

message GetSessionsRequest {
  // authenticated user
  int32 limit = 1;
  int32 offset = 2;
}

message GetSessionsResponse {
  repeated common.Session sessions = 1;
}